quad_serial/quad_mpi.txt
  File "quad_mpi.py", line 48
    print ( '  B        = %g' % ( b )
        ^
SyntaxError: invalid syntax
  File "quad_mpi.py", line 48
    print ( '  B        = %g' % ( b )
        ^
SyntaxError: invalid syntax
-------------------------------------------------------
Primary job  terminated normally, but 1 process returned
a non-zero exit code.. Per user-direction, the job has been aborted.
-------------------------------------------------------
--------------------------------------------------------------------------
mpirun detected that one or more processes exited with non-zero status, thus causing
the job to be terminated. The first process to do so was:

  Process name: [[22675,1],2]
  Exit code:    1
--------------------------------------------------------------------------
